# 3D-Smoothing-meshes

./: README.md
example_meshes/: bunny.off  camel.off  cow.off  cube.off
src/: CMakeLists.txt  curvature.cpp  curvature.h  main.cpp  smoothing.cpp  smoothing.h  training-for-ptas.doc
src/cmake/: FindLIBIGL.cmake
